Transformación LiveData _price

--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -125,7 +125,7 @@
                     android:layout_gravity="end"
                     android:layout_marginTop="@dimen/side_margin"
                     tools:text="Total $5.00"
-                    android:text="@{@string/subtotal_price(viewModel.price)}"/>
+                    android:text="@{@string/total_price(viewModel.price)}"/>
 
             </LinearLayout>
 
